--- a/views/add.erb
+++ b/views/add.erb
@@ -1,2 +1,8 @@
 <h1>Add Bookshelf</h1>
 
+<form method="post" action="/add">
+  <input type="text" id="name" name="name" value="" />
+  <input type="text" id="location" name="location" value="" />
+
+  <button id="submit">Add</button>
+</form>
